// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`frodo config-manager delete cors "frodo config-manager delete cors -n custom": should delete CORS secondary configuration by name custom in fr-config manager style. 1`] = `""`;

exports[`frodo config-manager delete cors "frodo config-manager delete cors -n custom": should delete CORS secondary configuration by name custom in fr-config manager style. 2`] = `
"Experimental feature in use: 'frodo config-manager delete cors'. This feature may change without notice.
Deleting CORS configuration: "custom"
"
`;

exports[`frodo config-manager delete cors "frodo config-manager delete cors": should delete all CORS secondary configurations in fr-config manager style. 1`] = `""`;

exports[`frodo config-manager delete cors "frodo config-manager delete cors": should delete all CORS secondary configurations in fr-config manager style. 2`] = `
"Experimental feature in use: 'frodo config-manager delete cors'. This feature may change without notice.
Deleting all CORS configurations.
"
`;
